--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
         body {
             font-family: "Microsoft JhengHei", sans-serif;
-            margin: 0; padding: 0;
+            margin: 0;
+            padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -16,7 +17,6 @@
             background-color: #222;
             color: #eee;
             transition: background-color 0.5s ease;
-            padding: 20px;
             text-align: center;
         }
 
